organizacion de rutas y efectos de animacion

--- a/2.SPA-HERO/src/app/components/about/about.component.html
+++ b/2.SPA-HERO/src/app/components/about/about.component.html
@@ -1,1 +1,9 @@
-<p>about works!</p>
+<h1 class="animated fadeIn fast">Sobre Comic App</h1>
+<hr>
+
+<p class="fadeIn">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+  Numquam, natus beatae quisquam, excepturi voluptatem
+  deserunt dolorem laborum, accusamus perspiciatis voluptate fuga tempora
+  dolore voluptates facere facilis ratione
+  accusantium similique harum?
+</p>
