--- a/2.SPA-HERO/src/app/components/home/home.component.html
+++ b/2.SPA-HERO/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid pl-5 fadeIn fast">
   <h1 class="display-3">Commic APP</h1>
   <p class="lead">Esta es una aplicacion de comics.</p>
   <hr class="my-4">
