--- a/2.SPA-HERO/src/app/components/busqueda/busqueda.component.html
+++ b/2.SPA-HERO/src/app/components/busqueda/busqueda.component.html
@@ -1,6 +1,13 @@
-<h1> Heroes <small> Marvel y DC</small></h1>
+<h1> Buscador: <small> {{ termino }} </small></h1>
 <hr>
 
+<div class="row" *ngIf="heroes.length == 0">
+  <div class="col-md-12">
+    <div class="alert alert-info" role="alert">
+      No existen resultados con el termino {{ termino }}
+    </div>
+  </div>
+</div>
 <div class="card-columns">
   <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
     <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
@@ -9,13 +16,13 @@
       <p class="card-text"> {{ heroe.bio }} </p>
       <p class="card-text"><small class="text-muted"> {{ heroe.aparicion }} </small></p>
 
-      <button (click)="verHeroe(i)" class="btn btn-outline-primary btn-block">
+      <!-- <button (click)="verHeroe(i)" class="btn btn-outline-primary btn-block">
         Ver Mas ...
-      </button>
+      </button> -->
 
-      <!-- <a [routerLink]="[ '/heroe', i ]" class="btn btn-outline-primary">
-        Ver más Link...
-      </a> -->
+      <a [routerLink]="[ '/heroes' ]" class="btn btn-outline-primary">
+        Regresar
+      </a>
     </div>
   </div>
 </div>
