--- a/2.SPA-HERO/src/app/components/shared/navbar/navbar.component.html
+++ b/2.SPA-HERO/src/app/components/shared/navbar/navbar.component.html
@@ -2,7 +2,8 @@
   <a class="navbar-brand" href="#">
     <img src="assets/img/A-64.png" width="30" height="30" alt="" loading="lazy">
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -18,9 +19,8 @@
         <a class="nav-link" [routerLink]="['about']">About</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar Heroe .." #buscarTexto (keyup.enter)="buscarHeroe(buscarTexto.value)"/>
+      <button class="btn btn-outline-primary my-2 my-sm-0" (click)="buscarHeroe(buscarTexto.value)" type="button">Buscar</button>
+
   </div>
 </nav>
