--- a/2.SPA-HERO/src/app/components/busqueda/busqueda.component.html
+++ b/2.SPA-HERO/src/app/components/busqueda/busqueda.component.html
@@ -9,20 +9,5 @@
   </div>
 </div>
 <div class="card-columns">
-  <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
-    <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
-    <div class="card-body">
-      <h5 class="card-title">{{ heroe.nombre }}</h5>
-      <p class="card-text"> {{ heroe.bio }} </p>
-      <p class="card-text"><small class="text-muted"> {{ heroe.aparicion }} </small></p>
-
-      <!-- <button (click)="verHeroe(i)" class="btn btn-outline-primary btn-block">
-        Ver Mas ...
-      </button> -->
-
-      <a [routerLink]="[ '/heroes' ]" class="btn btn-outline-primary">
-        Regresar
-      </a>
-    </div>
-  </div>
+  <app-heroe-target [heroe]="heroe" [index]="heroe.idx" *ngFor="let heroe of heroes;"></app-heroe-target>
 </div>
