--- a/4-SpotiApp/src/app/components/home/home.component.html
+++ b/4-SpotiApp/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-loading *ngIf="loading"></app-loading>
 
-<div class="alert alert-danger animated fadeIn">
+<div class="alert alert-danger animated fadeIn" *ngIf="error">
   <h3>Error</h3>
   <p>{{ message }}</p>
 </div>
